Add dimnens, fix list_item_article and adjust grid
Adjust grid: switch from Staggered Grid Layout Manager to regular GridLayoutManager

--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="theme_divider">#BDBDBD</color>
 
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="theme_secondary_text">#6000</color>
 </resources>
