--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
             android:background="@color/photo_placeholder" />
 
         <TextView
@@ -31,7 +30,7 @@
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="@color/ltgray"
+            android:textColor="@color/theme_primary_text"
             android:ellipsize="end"
             android:maxLines="4" />
 
@@ -43,7 +42,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="16dp"
-            android:textColor="#6000"
+            android:textColor="@color/theme_secondary_text"
             android:maxLines="2"
             android:ellipsize="end" />
     </LinearLayout>
